# PaintCpp

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Untitled.cpp  cmake_install.cmake  projet_GUI_c++.project
src/: skeleton.cpp
src/Controler/: controler.cpp  controler.h
src/View/: MyControlPanel.cpp  MyControlPanel.h  MyDrawingPanel.cpp  MyDrawingPanel.h  MyFrame.cpp  MyFrame.h  constants.h  view.cpp  view.h
src/model/: Couleur.cpp  Couleur.h  Dessin.cpp  Dessin.h  Forme.cpp  Forme.h  Ligne.cpp  Ligne.h  Oval.cpp  Oval.h  Point.cpp  Point.h  Rectangle.cpp  Rectangle.h
src/model/test/: CMakeLists.txt  main.cpp
